k8s/manifests/apps/loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - hosts:
      - loki.k8s.home3.jlb.ninja
  # default behavior is to use the secret ; but we store cert in a volume
  # secretName: letsencrypt-cert
  rules:
  - host: loki.k8s.home3.jlb.ninja
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki
            port:
              number: 3100
